--- a/浏览器缓存.md
+++ b/浏览器缓存.md
@@ -18,7 +18,7 @@
             max-age=30 30秒后缓存过期
             s-maxage=30 代理服务器30秒后缓存过期
             max-stale=30 30s之内即使缓存过期 也使用该缓存
-            min-fresh=30 30秒之内获取最新资源
+            min-fresh=30 希望30秒之内获取最新资源
         }
     协商缓存
         1.Last-Modified 文件最新的修改时间
